--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tercero",
-  "homepage": "https://github.com/BobMar1ey/new-try.git",
+  "homepage": "https://BobMar1ey.github.io/new-try",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
